# xyz-agent

./: .env.example  .gitignore  .gitmodules  .mcp.json  .npmrc  .xyz-agent  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  DESIGN-LOG.md  DESIGN.md  NFR.md  PRODUCT.md  README.md  TEST-STRATEGY.md  components.json  cw.config.json  demo-skill-message.html  eslint.config.mjs  index.html  package-lock.json  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  review-frontend.md  review-runtime-services.md  review-skills-docs.md  review_A1_robustness.md  review_A2_taste.md  review_A3_standards.md  review_B1_robustness.md  review_B2_taste.md  review_B3_standards.md  review_C1_robustness.md  review_CDE_taste_standards.md  review_D1_robustness.md  review_D2_taste.md  review_E1_robustness.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs  shortcuts.rs  sidecar.rs
src-tauri/src/api/: commands.rs  event_bus.rs  mod.rs  prompt_commands.rs  tool_commands.rs
src-tauri/src/commands/: chat.rs  dialog.rs  mod.rs  session.rs  settings_window.rs
src-tauri/src/db/: jsonl.rs  mod.rs  session_index.rs
src-tauri/src/engine/: agent_spawner.rs  agent_spawner_tests.rs  agent_template.rs  budget_guard.rs  concurrency.rs  mod.rs  task_tree.rs  task_tree_tests.rs
src-tauri/src/models/: event.rs  mod.rs  transcript.rs
src-tauri/src/prompts/: explore.md  general_purpose.md  plan.md  system_static.md
src-tauri/src/services/: agent_loop.rs  config.rs  context_manager.rs  data_context.rs  event_bus.rs  llm.rs  mod.rs  (+4 more)
(+3155 files in other folders)
