[package]
name = "xyz-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "xyz_agent"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
futures = "0.3"
async-trait = "0.1"
eventsource-stream = "0.2"
dirs = "6"
file-lock = "2"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
